--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,8 @@
     <title>Image Processor - Обработка изображений</title>
     <meta name="description" content="Мощный сервис для обработки изображений онлайн. Изменение размера, миниатюры, водяные знаки и многое другое.">
     <meta name="keywords" content="обработка изображений, resize, thumbnail, watermark, image processing">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -325,10 +325,9 @@
     <!-- Toast Notifications -->
     <div class="toast-container" id="toastContainer"></div>
 
-    <script src="js/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/js/config.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
-
